--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.7.9",
+    "animejs": "^3.1.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "cookie-parser": "^1.4.3",
